Include Qt installation